# asm

./: build.md
cw1/: CMakeLists.txt  README.md  solution.asm  solution.h  task1.asm  task2.asm  tests.cpp
cw1/utils/: asm_utils.asm  asm_utils.h  utils.cc  utils.h
cw1_test/: README.md  main.cpp
lab1/template/: CMakeLists.txt  solution.asm  tests.cpp
lab2/template/: solution.asm  tests.cpp
lab3/template/: CMakeLists.txt  solution.asm  tests.cpp
lab4/template/: solution.asm  solution.h  tests.cpp
lab5/template/: CMakeLists.txt  solution.asm  solution.h  tests.cpp
lab6/template/: solution.asm  solution.h  tests.cpp
lab7/template/: solution.asm  solution.h  tests.cpp
